# ChangeLog for net-misc/gns3-converter
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/gns3-converter/ChangeLog,v 1.2 2015/03/01 12:19:58 bman Exp $

  01 Mar 2015; Aaron Bauman <bman@gentoo.org> metadata.xml:
  update maintainer in metadata

*gns3-converter-1.1.0 (22 Nov 2014)

  22 Nov 2014; Ian Delaney <idella4@gentoo.org> +gns3-converter-1.1.0.ebuild,
  +metadata.xml:
  New ebuild written by B-Man to support gns3-gui-1.2 and will be proxy-
  maintained by him.  Closes bug #530098