@@ -1,24 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST gns3-converter-1.1.0.tar.gz 32051 SHA256 cf4dfa74aedae1b0b894bd9ca467c16111e86abac0ac1fcc5240148f3bec9c88 SHA512 6225f406ad1a9e5fb52631f6f83ba9dd6149ab52c2d99417a7cb5730ddfab57f44bbd22501afb50754f9de3fb694d05279a0607927a1c17734eae1cfda6eabff WHIRLPOOL bf62a9f0773ed39edc8f2ea409b3c29729b5e1a1e2b54f1ea655c5f6a63c7537f85f2210c669686346a6705978d70fef0afc2f48e4c67880c83dac014ae73c0d
-EBUILD gns3-converter-1.1.0.ebuild 620 SHA256 7c34deecdc7c9ae1d7cf0ee7ab75a348b54ce4ea3a7986addcdbd9aca0df6cf2 SHA512 72d2a653077dad60a7e2c9368051c4a3e14438faa886f8c5f9f583e7419f1ae50eef599bbd8015a054194d611a00dbd2cde9b4ecfd057e76ffdccdd3b60784a2 WHIRLPOOL 9cf0ba154a693d16bbfa1f7e9aed660d49b5c3a7fdfc7c6497787a93b01168a3b1da5b4d25fbcf60346ce0ceca8215ab2ea9b9d942e0629bdc7aceca16b41a65
-MISC ChangeLog 556 SHA256 0687f8f9b11145fdf21ed14a2bd96cd627e8ed0bbcff166cbe6eb857f590b1ad SHA512 f1488813efceb635a2372fe492e1ff6ce5e5ba079cfc5989af162cecb1396e2cbf439602a15a34f384b90d2738a8a5d507424aaa15aef163f9bbeafd84d53b17 WHIRLPOOL 79fd5ee33c4bf946f042852a572ce337921d567012b43c9f81bffba738ed862d6b6317a4374d02f53be34a5ec8a82a2199a8a182e620a0b2d1556d76ef941a0b
+DIST gns3-converter-1.2.0.tar.gz 44110 SHA256 a1bfd1546afa946364aa7d0ba9376450afeca0e6126545a28b73422fcc08ccd8 SHA512 4f2914301d094c43c3e1e547917937ecdddece5d895801aeb30c0d2f41e6f2d74a53e72221d999b41ce468284b7df144e59eae73ad164bc1430f07ec3008d85d WHIRLPOOL e5e75cef895004b8e3cc7fbbb790a3f4d6f9765ee9bd7a23dcc33dd84c90de0d2f86be22b7c92c61c7d5731e4e2a3f978e422fcf9359d0cbf3a48ee136262677
+EBUILD gns3-converter-1.2.0.ebuild 640 SHA256 075c224a4dc08c5062ece33e83f49425291da1ee918e2ee6e64128531c20c9d9 SHA512 3f7102e1f24ae13cd12f6f666e8c96e1911761ff0cb47306813a1df6f5e5684fb83dc0914dd890e2f6efec12c55f5ce30ff21394ac7e15a2367912a8a6485dd4 WHIRLPOOL 1f2c8a71f2b10b58112d80f5da2e9cd4bf7cd825183a80a69f0a5b1e2a6f93b89d0d84dfcd804bb606f5705683712c1a8ec1dfd5cf9f0f17271e3a17ba7613d8
+MISC ChangeLog 751 SHA256 bc114cc795952d88b36e7cff93030231edd7da87fa03f412aeaa5d7fd864c673 SHA512 e9bdd5fc8627ac89d858e7458b603bdc5f82e202168d61e20d0a69aa185534b9f6dfba7684ac6439ff7428ebfe9389de6c18a927f69d3e75740dd70d6563103b WHIRLPOOL df44ffcce75c2a18fe1c62c8a77675209a4a9df20dd02afc5eb971dbbd9954a35cbd0604aa9ed21962a6ae6b071c759250f71b28ce95e5313c6d8afa3d2ea9af
 MISC metadata.xml 229 SHA256 0e32bd4374eb7ddef5d9d3feb500bfd626eae6f88edfe43ac3847e65dde78281 SHA512 8a66f8c117584e3d9b891c2813466691397dbd50388956981eabf86c7720a15b57bc4584f704211faef0044500106802d3ef1bed1592145cf3f8b5259279a43f WHIRLPOOL dfa20fb61d9b2ebb6e4e35f24bfb2e584706440d30fef2e82c463f5ef75df66d5ba809f0126f95c908a59627c59ec1971f015e5d281efe121061b7b09137c883
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU8wPvAAoJENXWzZRV2HNsRzwP/1ApgQVZtV44pywEpCLTcfum
-w+6CFdB3oX7qlIIOGGnQJjiuTrv6hmruKPqbrcv9+jHGbC2ur/5QT0ROPa970SWJ
-gbjUbxrd/xwkxCJJdu4M0mhjrGAv1wleEsO1bRAnSjB99f9oNrsYlawT/HUHMtxG
-XbaT5gMontn/xKy4U8kZru+CYXc7Ms//wDM714ueie5ARmUpGzBSBtip2OqIRYVm
-B0Iei+I1oYk/koNBI1zGK4Ntbawe2Skd3iv+C3Gm2ykzzxI5cx07qCPN+lJhUqQK
-oMpACH0X1zP5xB11ion1Dm8zqV6XyWrR0jcFwagr3mT4ZZ2QHxLOpmdXwdNpCUl5
-zv7F4BBE669Xi8vRsKFT3wXqpaZWuG5VX8a9jzyVjikb8P3uEUQPOtm7iTioFxxp
-mF/I7LosTj2bwypqGXYq7ze45k2FvqpYbexRQ6AJfhdS44VqA41ykZmG9ie2f8+Y
-iljHAXo+UkFMm3Yz5LKCTRJo3sK7BNx37VuJ+RPYfon5szs3LVMj2bARefOEzD5H
-R7FK+DPH1gLNFFc6G9xpOb/pVVi01E4WlA348O64SwthYQVYM7YmLlX7kH0EWR1l
-4U9Q14ise/6kVf+GnMaX3tR6Fc/G9ugsgj/Hn8OSYAJ17kyYAyS7w3Qj5JjqlslK
-HJ4MAkJF1ir5AAhz70HA
-=cP57
+iQIcBAEBCAAGBQJVIlrNAAoJENXWzZRV2HNsiFkP/3cAzsKYAxnb8DSShgsUIw+J
+UljD7SnbErEWVlzfgFQ6LHbzokxMXJEobZoKJ2CE35vvfIeyZhyB3gFM/s/1to/p
+JbkqMdoduL3iF7Vc1ZQpJ8yRdf9DySp3TCSBXmCQ0MWsZItaVOUzxSx4WeJJGZ8B
+PhAjjmt5Colj+vWk1UX8oaLbggy3EVmkUwwGZTmoGEeLJEQElEVDu/+Xz4+CdsLg
+aACa06C+wfSuSYUzL4SZf6DRIXhA4Q9AUpTzRxeHr6xe3jhgTgdEW7R2wEGLZcO5
+BhCVGDG2Z7qvCF5pdlIljdkbIk+aBKOX2GGh4NpmpImpT1jc1glwV7ij1dekq/PB
+jozyfeEk7+4SK3wN1URVk2DnHdVFu5uLjLrdE3wByUufBEZsrWHdf95RDtajbNcQ
+tWWQ3FKOl8Duv2mzVvGyaMmr6xoAofIqD0dqI0JR7fDa/90STEMC0rw3rHXXaT1n
+6k/q2PIvWR1NpcuJZ/7LBEC2lMMB6EfTFZ70yR1fGn+UmNcgbDjPsRKuGmuCwQem
+Mhh0yW8M5Rzp4ovU4HJyqk0DL0INm3oyHIqjPL0mwq5Ebp6/8E6dYbIj3KfizeIM
+0G2Nksf8NmsKx5SlmtZoBm3O/gdGZes2JmD45D/9AW+T3oZ+w5ABeqMuxozORFiD
+Aie50AoWXOIB1bN6bO/R
+=6Uce
 -----END PGP SIGNATURE-----
