@@ -1,8 +1,8 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gns3-converter/gns3-converter-1.1.0.ebuild,v 1.1 2014/11/22 08:17:39 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gns3-converter/gns3-converter-1.2.0.ebuild,v 1.1 2015/04/06 10:07:03 bman Exp $
 
-EAPI="5"
+EAPI=5
 
 PYTHON_COMPAT=( python{3_3,3_4} )
 
@@ -10,7 +10,7 @@ inherit distutils-r1
 
 DESCRIPTION="Designed to convert old ini-style GNS3 topologies"
 HOMEPAGE="https://github.com/dlintott/gns3-converter"
-SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
+SRC_URI="https://github.com/GNS3/${PN}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
