@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/gns3-converter
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gns3-converter/ChangeLog,v 1.2 2015/03/01 12:19:58 bman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gns3-converter/ChangeLog,v 1.3 2015/04/06 10:07:03 bman Exp $
+
+*gns3-converter-1.2.0 (06 Apr 2015)
+
+  06 Apr 2015; Aaron Bauman <bman@gentoo.org> +gns3-converter-1.2.0.ebuild,
+  -gns3-converter-1.1.0.ebuild:
+  version bump; drop gns3-converter-1.1.0.ebuild
 
   01 Mar 2015; Aaron Bauman <bman@gentoo.org> metadata.xml:
   update maintainer in metadata
